<resources>
    <string name="app_name">Lineage</string>
    <string name="content_description_video_view_holder_image_view">Thumbnail of the video</string>
    <string name="settings">Settings</string>
    <string name="no_thumbnail">No Thumbnail</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="hint_school_code">School code</string>
    <string name="button_no_access_code">Don\'t have access code?</string>
    <string name="content_description_open_drawer">Open drawer</string>
    <string name="content_description_close_drawer">Close drawer</string>
    <string name="label_action_refresh">Refresh</string>
    <string name="title_rationale_ext_storage">We need the write to external storage permission</string>
    <string name="message_rationale_ext_storage">Without this permission, this app will not be able to download contents overnight!</string>
    <string name="button_try_again">Try again</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_downloading_eclipses">Downloading…</string>
    <string name="error_no_videos_here">No videos yet!</string>
    <string name="content_description_download_button">Download button</string>
    <string name="content_description_overflow_button">Overflow button</string>
    <string name="label_action_auto_download">Auto download</string>
    <string name="error_title_download_video_impossible">Cannot download video</string>
    <string name="error_description_download_video_impossible">Something is wrong with the video and it cannot be download. Please report to us!</string>
    <string name="button_ok">OK</string>
    <string name="error_toast_sign_in_failed">Sign in failed. Please try again</string>
    <string name="error_til_wrong_school_code">Incorrect school code!</string>
</resources>
